Name:                   GuiHaskell
Synopsis:               A graphical REPL and development environment for Haskell
Description:
    GuiHaskell aims to be a cross-platform development environment
    for Haskell that is integrated with other popular Haskell tools.
    The program uses the PropLang GUI combinator library to declaratively
    define the relationships between UI elements and data.
Version:                0.1
License:                BSD3
License-file:           LICENSE
Author:                 Neil Mitchell
Homepage:               http://www-users.cs.york.ac.uk/~ndm/guihaskell/
Category:               System
Build-Depends:          base>=2.0, filepath>=1.0, proplang>=0.1, gtk>=0.9.11, glade>=0.9.11, parsec

Executable:             guihaskell
Main-is:                Main.hs
Other-modules:          Config Data Evaluator Prof Util Text.EscapeCodes
Ghc-options:            -O2 -Wall
